:recycle: rewrite webhook settings in vue; api improvements
fixes #2888
fixes #2889
