# app/Http/Controllers/API/v1/WebhookController.php
@@ -18,8 +18,8 @@ class WebhookController extends Controller
      *     path="/webhooks",
      *     operationId="getWebhooks",
      *     tags={"Webhooks"},
-     *     summary="Get webhooks for current user and current application",
-     *     description="Returns all webhooks which are created for the current user and which the current authorized applicaton has access to.",
+     *     summary="Get webhooks for current user.",
+     *     description="Returns all webhooks which are created for the current user.",
      *     @OA\Response(
      *         response=200,
      *         description="successful operation",
@@ -37,12 +37,8 @@ class WebhookController extends Controller
      *     }
      * )
      */
-    public function getWebhooks(Request $request): AnonymousResourceCollection {
-        $clientId = $request->user()->token()->client->id;
-        $webhooks = Webhook::where('oauth_client_id', '=', $clientId)
-                           ->where('user_id', '=', $request->user()->id)
-                           ->get();
-        return WebhookResource::collection($webhooks);
+    public function index(): AnonymousResourceCollection {
+        return WebhookResource::collection(Webhook::where('user_id', auth()->id())->get());
     }
 
     /**
@@ -51,7 +47,7 @@ class WebhookController extends Controller
      *      operationId="getSingleWebhook",
      *      tags={"Webhooks"},
      *      summary="Get single webhook",
-     *      description="Returns a single webhook Object, if user and application is authorized to see it",
+     *      description="Returns a single webhook Object, if user is authorized to see it",
      *      @OA\Parameter (
      *          name="id",
      *          in="path",
@@ -74,19 +70,11 @@ class WebhookController extends Controller
      *           {"passport": {}}, {"token": {}}
      *       }
      *     )
-     *
-     * Show single webhook
-     *
-     * @param int $webhookId
-     *
-     * @return WebhookResource|JsonResponse
      */
-    public function getWebhook(Request $request, int $webhookId): WebhookResource|JsonResponse {
-        $clientId = $request->user()->token()->client->id;
-        $webhook  = Webhook::where('oauth_client_id', '=', $clientId)
-                           ->where('user_id', '=', $request->user()->id)
-                           ->where('id', '=', $webhookId)
-                           ->first();
+    public function show(int $webhookId): WebhookResource|JsonResponse {
+        $webhook = Webhook::where('user_id', auth()->id())
+                          ->where('id', '=', $webhookId)
+                          ->first();
         if ($webhook == null) {
             return $this->sendError('No webhook found for this id.');
         }
@@ -98,7 +86,7 @@ class WebhookController extends Controller
      *      path="/webhooks/{id}",
      *      operationId="deleteWebhook",
      *      tags={"Webhooks"},
-     *      summary="Delete a webhook if the user and application are authorized to do",
+     *      summary="Delete a webhook if the user is authorized to do",
      *      description="",
      *      @OA\Parameter (
      *          name="id",
@@ -107,30 +95,21 @@ class WebhookController extends Controller
      *          example=1337,
      *          @OA\Schema(type="integer")
      *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @OA\JsonContent(
-     *                      ref="#/components/schemas/SuccessResponse"
-     *          )
-     *       ),
-     *       @OA\Response(response=400, description="Bad request"),
-     *       @OA\Response(response=404, description="No webhook found for this id"),
-     *       @OA\Response(response=403, description="User or application not authorized to delete this webhook"),
-     *       security={
-     *           {"passport": {}}, {"token": {}}
-     *       }
+     *      @OA\Response(response=204, description="Webhook deleted."),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="No webhook found for this id"),
+     *      @OA\Response(response=403, description="User or application not authorized to delete this webhook"),
+     *      security={
+     *          {"passport": {}}, {"token": {}}
+     *      }
      *     )
-     *
-     * @param int $webhookId
-     *
-     * @return JsonResponse
      */
-    public function deleteWebhook(Request $request, int $webhookId): JsonResponse {
+    public function destroy(int $webhookId): JsonResponse {
         try {
             $webhook = Webhook::findOrFail($webhookId);
-            WebhookBackend::deleteWebhook($webhook, $request->user()->token()->client);
-            return $this->sendResponse();
+            $this->authorize('delete', $webhook);
+            $webhook->delete();
+            return response()->json(null, 204);
         } catch (AuthorizationException) {
             return $this->sendError('You are not allowed to delete this webhook', 403);
         } catch (ModelNotFoundException) {
