# storage/api-docs/api-docs.json
@@ -4425,8 +4425,8 @@
                 "tags": [
                     "Webhooks"
                 ],
-                "summary": "Get webhooks for current user and current application",
-                "description": "Returns all webhooks which are created for the current user and which the current authorized applicaton has access to.",
+                "summary": "Get webhooks for current user.",
+                "description": "Returns all webhooks which are created for the current user.",
                 "operationId": "getWebhooks",
                 "responses": {
                     "200": {
@@ -4467,7 +4467,7 @@
                     "Webhooks"
                 ],
                 "summary": "Get single webhook",
-                "description": "Returns a single webhook Object, if user and application is authorized to see it",
+                "description": "Returns a single webhook Object, if user is authorized to see it",
                 "operationId": "getSingleWebhook",
                 "parameters": [
                     {
@@ -4516,7 +4516,7 @@
                 "tags": [
                     "Webhooks"
                 ],
-                "summary": "Delete a webhook if the user and application are authorized to do",
+                "summary": "Delete a webhook if the user is authorized to do",
                 "description": "",
                 "operationId": "deleteWebhook",
                 "parameters": [
@@ -4531,15 +4531,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/SuccessResponse"
-                                }
-                            }
-                        }
+                    "204": {
+                        "description": "Webhook deleted."
                     },
                     "400": {
                         "description": "Bad request"
